ver.0.10.00 (MLS111): itemsテーブルのすべてのレコードをそのまま表示する

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
 	<main>
 		<article>
 			<p>このページをブラウザで見ることができれば、起動は成功しています。</p>
+			<p><a href="/advanced.spring.org/menu">機能メニュはこちらから</a></p>
 		</article>
 	</main>
 </body>
