ver.0.11.00 (MLS121): カテゴリリンクによりカテゴリ別商品一覧を表示する

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8,3 +8,13 @@ html body {
 	color: dimgray;
 	font-size: 1.4rem;
 }
+
+.category__item {
+	margin: 0 2.5px;
+}
+.category__item:first-child {
+	margin-left: 0;
+}
+.category__item:last-child {
+	margin-right: 0;
+}
