--- a/src/main/resources/templates/pages/items/list.html
+++ b/src/main/resources/templates/pages/items/list.html
@@ -8,6 +8,13 @@
 			<h2>商品管理</h2>
 			<section>
 				<h3>商品一覧</h3>
+				<nav class="categry__list">
+					<a class="category__item" href="/advanced.spring.org/items/list">全商品</a>
+					<a class="category__item"
+					   th:each="category : ${categories}"
+					   th:href="@{/advanced.spring.org/items/list?categoryCode={code}(code=${category.code})}"
+					   th:text="${category.name}"></a>
+				</nav>
 				<th:block th:unless="${items}">
 				<p>商品は見つかりませんでした。</p>
 				</th:block>
