ver.0.11.00 (MLS122): 選択されているカテゴリリンクのリンクを無効にする

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -18,3 +18,10 @@ html body {
 .category__item:last-child {
 	margin-right: 0;
 }
+
+.no--linked {
+	pointer-events: none;
+	color: dimgray;
+	font-weight: bold;
+	text-decoration: none;
+}
