ver.0.12.00 (MLS132): 商品価格の範囲検索による商品一覧を表示する（検索キーワードや価格範囲の復元を追加実装）

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -9,6 +9,17 @@ html body {
 	font-size: 1.4rem;
 }
 
+.criteria {
+	width: 70px;
+	margin: 2.5px 0;
+}
+.criteria--long {
+	width: inherit;
+}
+
+.category__list {
+	margin-top: 7.5px;
+}
 .category__item {
 	margin: 0 2.5px;
 }
