--- a/src/main/resources/templates/pages/users/list.html
+++ b/src/main/resources/templates/pages/users/list.html
@@ -29,7 +29,7 @@
 							<td th:text="${user.id}"></td>
 							<td th:text="${user.role}"></td>
 							<td th:text="${user.name}"></td>
-							<td th:text="${user.prefecture}"></td>
+							<td th:text="${user.prefecture.name}"></td>
 							<td th:text="${user.address}"></td>
 							<td th:text="${user.phone}"></td>
 							<td th:text="${user.email}"></td>
