--- a/src/main/resources/templates/pages/users/list.html
+++ b/src/main/resources/templates/pages/users/list.html
@@ -27,7 +27,7 @@
 						</tr>
 						<tr th:each="user : ${users}">
 							<td th:text="${user.id}"></td>
-							<td th:text="${user.role}"></td>
+							<td th:text="${user.role.name}"></td>
 							<td th:text="${user.name}"></td>
 							<td th:text="${user.prefecture.name}"></td>
 							<td th:text="${user.address}"></td>
