--- a/src/main/resources/templates/pages/users/list.html
+++ b/src/main/resources/templates/pages/users/list.html
@@ -27,9 +27,9 @@
 						</tr>
 						<tr th:each="user : ${users}">
 							<td th:text="${user.id}"></td>
-							<td th:text="${user.role.name}"></td>
+							<td th:text="${user.role}"></td>
 							<td th:text="${user.name}"></td>
-							<td th:text="${user.prefecture.name}"></td>
+							<td th:text="${user.prefecture}"></td>
 							<td th:text="${user.address}"></td>
 							<td th:text="${user.phone}"></td>
 							<td th:text="${user.email}"></td>
