--- a/src/main/resources/templates/pages/users/list.html
+++ b/src/main/resources/templates/pages/users/list.html
@@ -8,6 +8,19 @@
 			<h2>利用者管理</h2>
 			<section>
 				<h3>利用者一覧</h3>
+				<nav class="search__criteria">
+					<form action="/advanced.spring.org/users/list" method="get">
+						<select name="prefectureCode">
+							<option value="">--- 都道府県 ---</option>
+							<th:block th:each="prefecture : ${prefectures}">
+								<option th:value="${prefecture.code}"
+										th:text="${prefecture.code} + '：' + ${prefecture.name}"
+										th:selected="${prefecture.code == prefectureCode}"></option>
+							</th:block>
+						</select>
+						<button>検索</button>
+					</form>
+				</nav>
 				<th:block th:unless="${users}">
 					<p>利用者は見つかりませんでした。</p>
 				</th:block>
