--- a/src/main/resources/templates/pages/users/list.html
+++ b/src/main/resources/templates/pages/users/list.html
@@ -18,6 +18,14 @@
 										th:selected="${prefecture.code == prefectureCode}"></option>
 							</th:block>
 						</select>
+						<th:block th:each="role : ${roles}">
+							<input type="radio" name="role"
+								   th:value="${role.id}"
+								   th:id="'role_' + ${role.id}"
+								   th:checked="${role.id == roleId}" />
+							<label th:for="'role_' + ${role.id}"
+								   th:text="${role.name}"></label>
+						</th:block>
 						<button>検索</button>
 					</form>
 				</nav>
