--- a/src/main/resources/templates/pages/users/list.html
+++ b/src/main/resources/templates/pages/users/list.html
@@ -9,7 +9,7 @@
 			<section>
 				<h3>利用者一覧</h3>
 				<nav class="search__criteria">
-					<form action="/advanced.spring.org/users/list" method="get">
+					<form class="criteria__foreign_key" action="/advanced.spring.org/users/list" method="get">
 						<select name="prefectureCode">
 							<option value="">--- 都道府県 ---</option>
 							<th:block th:each="prefecture : ${prefectures}">
@@ -26,6 +26,10 @@
 							<label th:for="'role_' + ${role.id}"
 								   th:text="${role.name}"></label>
 						</th:block>
+						<button>検索</button>
+					</form>
+					<form class="criteria__partial_match" action="/advanced.spring.org/users/list" method="get">
+						<input type="text" name="name" placeholder="氏名" th:value="${name}" />
 						<button>検索</button>
 					</form>
 				</nav>
