ver.0.24.00 (MLS241): 1画面に10件の利用者を表示する

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -43,6 +43,20 @@ html body {
 	margin-right: 0;
 }
 
+.link__pagenations--list {
+	display: inline;
+	list-style-type: none;
+	margin: 0;
+	padding :0;
+}
+.link__pagenations--item {
+	display: inline;
+}
+
+.table__caption--pagenation {
+	text-align: left;
+}
+
 .no--linked {
 	pointer-events: none;
 	color: dimgray;
